Fixed Table overflow not reachable

--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,7 +18,8 @@ ion-card-header {
 }
 
 .spiel-table {
-  display: table;
+  display: block;
+  overflow-x: auto;
   width: 100%;
 
   table {
